--- a/index.html
+++ b/index.html
@@ -7,8 +7,10 @@
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
-    <div class="wrapper">
-        <header class="main_head">Main head</header>
+    <div class="wrapper">        
+        <header class="main-head">
+            <div class="header__logo">Main head</div>
+        </header>
             <nav class="main-nav">
                 <ul>
                     <li><a href="">Nav 1</a></li>
